[package]
name = "vquiz"
version = "0.1.0"
edition = "2021"
authors = ["v4zha"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
crossterm = "0.25.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.23.0"
tui = { version = "0.19.0", features = ["serde"] }
